udpate: Ensure client responds appropriately to loading forums for a specific sections' course version

--- a/client/dev/main/view.html
+++ b/client/dev/main/view.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>{{main.label}}</h1>
-    <ul class="row">
+    <ul ng-show="main.hasForums" class="row">
         <li class="forum card hoverable" ng-repeat="forum in main.forums">
             <div class="card-content">
                 <h2 class="card-title label"><a ng-href="#/forum/{{forum.id}}">{{forum.label}}</a></h2>
@@ -11,4 +11,5 @@
             </div>
         </li>
     </ul>
+    <p ng-hide="main.hasForums">No forums are available for this course at this time. Contact your professor for assistance.</p>
 </div>
