--- a/client/dev/thread/view.html
+++ b/client/dev/thread/view.html
@@ -5,7 +5,13 @@
     <div class="collapsible-body thread-body">
         <div ng-bind-html="thread.description" class="description"></div>
 
-        <button class="btn-add-post btn-floating btn-small waves-effect waves-light"
+        <button ng-show="thread.adminEditing"
+                class="btn-edit-thread btn-floating btn-small waves-effect waves-light amber"
+                ng-click="thread.edit($event)">
+            <i class="material-icons">edit</i>
+        </button>
+
+        <button ng-hide="thread.adminEditing" class="btn-add-post btn-floating btn-small waves-effect waves-light"
                 ng-click="thread.addPost($event)">
             <i class="material-icons">add</i>
         </button>
