update: fix edit scale bug.

--- a/client/dev/thread/view.html
+++ b/client/dev/thread/view.html
@@ -34,7 +34,7 @@
                     </li>
                 </ul>
                 <button class="btn-edit-scale btn-floating waves-effect waves-light amber"
-                        ng-click="thread.editScale($event)">
+                        ng-click="thread.editScale()">
                     <i class="material-icons">edit</i>
                 </button>
             </div>
