udpate: configure scale types, initial build of numeric scale for grading

--- a/client/dev/scale/numeric/view.html
+++ b/client/dev/scale/numeric/view.html
@@ -1,1 +1,5 @@
-<div>Numeric Scale</div>
+<p class="scale-numeric right range-field">
+    Score:
+    <input type="range" id="scale-{{vm.post.id}}" min="0" max="{{vm.scale.maxPoints}}"
+           ng-model="vm.score" ng-change="vm.setScore($event)" />
+</p>
