--- a/client/dev/scale/numeric/view.html
+++ b/client/dev/scale/numeric/view.html
@@ -1,5 +1,5 @@
 <p class="scale-numeric right range-field">
     Score:
-    <input type="range" id="scale-{{vm.post.id}}" min="0" max="{{vm.scale.maxPoints}}"
+    <input class="right" type="range" id="scale-{{vm.post.id}}" min="0" max="{{vm.scale.maxPoints}}"
            ng-model="vm.score" ng-change="vm.setScore($event)" />
 </p>
